--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Matcha Cafe Page</title>
-
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Matcha Cafe</h1>
